syntax = "proto3";

import "google/protobuf/empty.proto";
import "Grpc/ProtocolBuffers/guid_request.proto";

option csharp_namespace = "MonitorFileSystem.Grpc.ProtocolBuffers";

service MonitorManagement {
  rpc CreateWatcher             (WatcherRequest)                     returns (WatcherResponse)       ;
  rpc RemoveWatcher             (GuidRequest)                     returns (google.protobuf.Empty) ;
  rpc DisableWatcher            (GuidRequest)                     returns (google.protobuf.Empty) ;
  rpc EnableWatcher             (GuidRequest)                     returns (google.protobuf.Empty) ;
  rpc ToggleWatcher             (GuidRequest)                     returns (google.protobuf.Empty) ;
  rpc UpdateWatcher             (UpdateWatcherRequest)                     returns (google.protobuf.Empty) ;
  
  rpc CreateGroup               (GroupRequest)                       returns (GroupResponse) ;
  rpc RemoveGroup               (GuidRequest)                       returns (google.protobuf.Empty) ;
  rpc UpdateGroup               (UpdateGroupRequest)                       returns (google.protobuf.Empty) ;
  rpc AddWatcherTo              (WatcherAndGroupRequest)             returns (google.protobuf.Empty) ;
  rpc AddManyWatcherTo          (ManyWatcherAndGroupRequest)         returns (google.protobuf.Empty) ;
  rpc AddWatcherToMany          (WatcherAndManyGroupRequest)         returns (google.protobuf.Empty) ;
  rpc AddManyWatcherToMany      (ManyWatcherAndManyGroupRequest)     returns (google.protobuf.Empty) ;
  rpc RemoveWatcherFor          (WatcherAndGroupRequest)             returns (google.protobuf.Empty) ;
  rpc RemoveManyWatcherFor      (ManyWatcherAndGroupRequest)         returns (google.protobuf.Empty) ;
  rpc RemoveWatcherForMany      (WatcherAndManyGroupRequest)         returns (google.protobuf.Empty) ;
  rpc RemoveManyWatcherForMany  (ManyWatcherAndManyGroupRequest)     returns (google.protobuf.Empty);
  
  rpc ClearUpAll                (google.protobuf.Empty)              returns (google.protobuf.Empty) ;
  rpc ClearWatcher              (google.protobuf.Empty)              returns (google.protobuf.Empty) ;
  rpc ClearGroup                (google.protobuf.Empty)              returns (google.protobuf.Empty) ;
  
  rpc GetWatchers               (google.protobuf.Empty)              returns (stream WatcherResponse);
  rpc GetWatchersOf             (GuidRequest)                       returns (stream WatcherResponse);
  rpc GetGroups                 (google.protobuf.Empty)              returns (stream GroupResponse)  ;
  
  rpc FindWatcher               (GuidRequest)                        returns (WatcherResponse)       ;
  rpc FindGroup                 (GuidRequest)                        returns (GroupResponse)         ;
  rpc FindGroupWithoutOperates  (GuidRequest)                        returns (GroupResponse)         ;
}

enum Event {
  None          = 0   ; // 0b0000_0000_0000_0000
  Created       = 1   ; // 0b0000_0000_0000_0001
  Deleted       = 2   ; // 0b0000_0000_0000_0010
  Renamed       = 4   ; // 0b0000_0000_0000_0100
  Changed       = 6136; // 0b0001_0111_1111_1000
  FileName      = 16  ; // 0b0000_0000_0001_0000
  DirectoryName = 32  ; // 0b0000_0000_0010_0000
  Attributes    = 64  ; // 0b0000_0000_0100_0000
  Size          = 128 ; // 0b0000_0000_1000_0000
  LastWrite     = 256 ; // 0b0000_0001_0000_0000
  LastAccess    = 512 ; // 0b0000_0010_0000_0000
  CreationTime  = 1024; // 0b0000_0100_0000_0000
  Security      = 4096; // 0b0001_0000_0000_0000
}

message WatcherRequest {
  string name = 1;
  string path = 2;
  string filter = 3;
  
  oneof event {
    Event event_value = 4;
  }
}

message UpdateWatcherRequest {
  string guid = 1;
  string name = 2;
  string path = 3;
  string filter = 4;
  
  oneof event {
    Event event_value = 5;
  }
}

message WatcherResponse {
  string guid = 1;
  string name = 2;
  string path = 3;
  string filter = 4;

  Event event = 5;
  bool is_enable = 6;
}

message GroupRequest {
  string name = 1;
  string description = 2;
}

message UpdateGroupRequest {
  string guid = 1;
  string name = 2;
  string description = 3;
}

message GroupResponse {
  string guid = 1;
  string name = 2;
  string description = 3;
  repeated WatcherResponse watchers = 4;
}

message WatcherAndGroupRequest {
  GuidRequest watcher = 1;
  GuidRequest group = 2;
}

message ManyWatcherAndGroupRequest {
  repeated GuidRequest watchers = 1;
  GuidRequest group = 2;
}

message WatcherAndManyGroupRequest {
  GuidRequest watcher = 1;
  repeated GuidRequest groups = 2;
}

message ManyWatcherAndManyGroupRequest {
  repeated GuidRequest watchers = 1;
  repeated GuidRequest groups = 2;
}